--- a/src/components/ui/button.astro
+++ b/src/components/ui/button.astro
@@ -10,7 +10,7 @@ export const buttonVariants = tv({
   ],
   defaultVariants: { color: 'neutral', size: 'sm' },
   variants: {
-    color: { neutral: 'bg-3 enabled:hover:text-brand', ghost: 'enabled:hover:text-brand enabled:hover:bg-3' },
+    color: { neutral: 'bg-3 hover:text-brand', ghost: 'hover:text-brand hover:bg-3' },
     size: { sm: 'h-8 px-3 text-xs', icon: 'size-8 [&_svg]:size-4' },
   },
 });
