--- a/src/pages/blog/results.astro
+++ b/src/pages/blog/results.astro
@@ -14,7 +14,11 @@ import { db, sql } from 'astro:db';
 import { Dot, RefreshCw } from 'lucide-astro';
 import { twJoin } from 'tailwind-merge';
 
-let posts = (await getCollection('posts')).sort((a, b) => b.data.published.valueOf() - a.data.published.valueOf());
+const globs = await Astro.glob('/src/content/posts/**/*.mdx');
+
+let posts = (await getCollection('posts'))
+  .map((post) => ({ ...post, glob: globs.find((glob) => glob.url?.includes(post.slug)) }))
+  .sort((a, b) => b.data.published.valueOf() - a.data.published.valueOf());
 
 if (Astro.request.method === 'POST') {
   const formData = await Astro.request.formData();
@@ -49,7 +53,7 @@ if (Astro.request.method === 'POST') {
             <div class="flex items-center text-2">
               <Date value={post.data.published} />
               <Dot aria-hidden class="shrink-4 size-4" />
-              <Text>{post.render().then((data) => data.remarkPluginFrontmatter.readingTime)}</Text>
+              <Text>{post.glob?.frontmatter.readingTime}</Text>
             </div>
           </a>
         </li>
