--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const posts = (await getCollection('posts'))
   .slice(0, 3);
 ---
 
-<Layout class="mx-auto flex w-full max-w-xl flex-col gap-14 lg:max-w-screen-lg lg:gap-20">
+<Layout class="mx-auto flex w-full max-w-xl flex-col gap-14 lg:max-w-screen-xl lg:gap-20 lg:px-20">
   <section class="flex items-center gap-24">
     <div>
       <Text as="h1" class="leading-none">CHRISTIAN PENROD</Text>
