--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,17 +1,24 @@
 ---
-import Favicon from '@/assets/favicon.webp';
+import Me from '@/assets/me.webp';
 import PostCard from '@/components/post-card.astro';
-import PostCode from '@/components/post-code.astro';
 import PostGithub from '@/components/post-github.astro';
 import PostSubheader from '@/components/post-subheader.astro';
+import Badge from '@/components/ui/badge.astro';
+import Code from '@/components/ui/code.astro';
 import Date from '@/components/ui/date.astro';
 import Link from '@/components/ui/link.astro';
+import Note from '@/components/ui/note.astro';
 import Separator from '@/components/ui/separator.astro';
+import * as TableOfContents from '@/components/ui/table-of-contents';
+import Text from '@/components/ui/text.astro';
 import Layout from '@/layouts/layout.astro';
 import type { GetStaticPaths } from 'astro';
 import { Image } from 'astro:assets';
 import { getCollection, type CollectionEntry } from 'astro:content';
-import { Calendar, Clock4, Eye, Github, Linkedin, Mail, Rss, Twitter } from 'lucide-astro';
+import { Calendar, Clock4, Eye } from 'lucide-astro';
+
+type Post = CollectionEntry<'posts'>;
+type Props = { post: Post; prev: Post; next: Post };
 
 export const getStaticPaths: GetStaticPaths = async () =>
   getCollection('posts').then((posts) =>
@@ -24,118 +31,57 @@ export const getStaticPaths: GetStaticPaths = async () =>
       }),
   );
 
-type Post = CollectionEntry<'posts'>;
-type Props = { post: Post; prev: Post; next: Post };
-
 const { post, prev, next } = Astro.props;
-const { remarkPluginFrontmatter: extras, headings, Content } = await post.render();
+const { remarkPluginFrontmatter, headings, Content } = await post.render();
 ---
 
 <Layout
   title={post.data.title}
   description={post.data.description}
   og={`open-graph/src/content/posts/${post.slug}.png`}
+  class="mx-auto max-w-screen-xl xl:grid xl:grid-cols-[1fr,18rem] xl:gap-16 xl:px-16"
 >
-  <div class="mt-fluid-5 mx-auto max-w-screen-lg xl:grid xl:grid-cols-[1fr,17rem] xl:gap-16">
-    <article class="mx-auto max-w-prose">
-      <div class="flex flex-col gap-3">
-        <h1 class="font-bold uppercase tracking-widest text-lg">{post.data.title}</h1>
-        <div class="text-xxs flex flex-wrap items-center gap-4 text-2">
-          <div class="flex items-center gap-2 rounded border bg-2 px-2">
-            <Calendar class="shrink-0" size={14} aria-hidden />
-            <Date value={post.data.published} />
-          </div>
-          <div class="flex items-center gap-2 rounded border bg-2 px-2">
-            <Clock4 class="shrink-0" size={14} aria-hidden />
-            <span>{extras.readingTime}</span>
-          </div>
-          <div
-            x-data={`{ views: $fetch("/blog/api/views", ${JSON.stringify({ method: 'PUT', body: { slug: post.slug } })})}`}
-            class="flex items-center gap-2 rounded border bg-2 px-2 tracking-wider"
-          >
-            <Eye class="shrink-0" size={14} aria-hidden />
-            <span x-text="(await views)?.toString().padStart(6, '0')">000000</span>
-          </div>
-        </div>
+  <article>
+    <Text as="h1" class="uppercase text-3xl">{post.data.title}</Text>
+    <div class="mt-4 flex flex-wrap items-center gap-4">
+      <Badge><Calendar aria-hidden /><Date value={post.data.published} /></Badge>
+      <Badge><Clock4 aria-hidden />{remarkPluginFrontmatter.readingTime}</Badge>
+      <Badge
+        x-data={`{ views: $fetch("/blog/views", ${JSON.stringify({ method: 'PUT', body: { slug: post.slug } })})}`}
+      >
+        <Eye aria-hidden />
+        <Text x-text="(await views)?.toString().padStart(6, '0')">000000</Text>
+      </Badge>
+    </div>
+    <Separator class="my-8" />
+    <div class="flex max-w-[70ch] flex-col gap-8 leading-7 [&>p]:text-1/85 [&_p_a]:underline">
+      <Content components={{ h2: PostSubheader, a: Link, figure: Code, blockquote: Note }} />
+      {post.data.repo && <PostGithub repo={post.data.repo} />}
+    </div>
+    <Separator class="mb-8 mt-16" />
+    <div class="flex flex-col gap-6">
+      <Text as="h3">MORE POSTS</Text>
+      <ul class="grid gap-x-10 gap-y-6 md:grid-cols-2">
+        <PostCard post={prev} />
+        <PostCard post={next} />
+      </ul>
+    </div>
+  </article>
+  <aside class="sticky top-20 hidden h-max rounded border p-4 xl:block">
+    <TableOfContents.Root aria-labelledby="table-of-contents">
+      <TableOfContents.Title id="table-of-contents">TABLE OF CONTENTS</TableOfContents.Title>
+      <TableOfContents.Links>
+        <TableOfContents.Link {...{ slug: 'heading', text: 'Introduction' }} />
+        {headings.map((heading) => <TableOfContents.Link {...heading} />)}
+      </TableOfContents.Links>
+    </TableOfContents.Root>
+    <Separator class="my-4" />
+    <div class="flex gap-4">
+      <div class="size-14 shrink-0 rounded border bg-2"><Image src={Me} alt="Me" loading="eager" /></div>
+      <div class="flex flex-col text-xs">
+        <Text class="font-medium">CHRISTIAN PENROD</Text>
+        <Text class="text-2">Front-End Web Developer</Text>
       </div>
-      <Separator class="mb-4 mt-6 xl:mb-10" />
-      <div class="block xl:hidden">
-        <details>
-          <summary class="tracking-wider text-xs">TABLE OF CONTENTS</summary>
-          <!-- prettier-ignore -->
-          <ol class="flex pt-2 flex-col gap-1 text-xs text-2">
-            <li><Link href="#introduction">Introduction</Link></li>
-            {headings.map((heading) => (<li><Link href={`#${heading.slug}`}>{heading.text}</Link></li>))}
-          </ol>
-        </details>
-        <Separator class="mb-10 mt-4" />
-      </div>
-      <div data-content class="flex flex-col gap-8 !leading-relaxed text-xs">
-        <Content components={{ a: Link, h2: PostSubheader, figure: PostCode }} />
-        {post.data.repo && <PostGithub repo={post.data.repo} />}
-      </div>
-      <Separator class="mb-16 mt-10" />
-      <div class="flex flex-col gap-4">
-        <h3 class="font-bold tracking-widest">MORE POSTS</h3>
-        <div class="grid gap-x-10 gap-y-6 md:grid-cols-2">
-          <PostCard post={prev} />
-          <PostCard post={next} />
-        </div>
-      </div>
-    </article>
-    <h2 id="introduction" class="sr-only"></h2>
-    <aside class="sticky top-10 hidden h-max rounded border xl:block">
-      <div class="flex flex-col gap-4 border-b p-4">
-        <h2 class="tracking-wider text-xs">TABLE OF CONTENTS</h2>
-        <!-- prettier-ignore -->
-        <ol class="flex flex-col gap-1 text-xxs text-2">
-          <li><Link href="#introduction">Introduction</Link></li>
-          {headings.map((heading) => (<li><Link href={`#${heading.slug}`}>{heading.text}</Link></li>))}
-        </ol>
-      </div>
-      <div class="flex gap-4 p-4">
-        <div class="h-[70px] w-[70px]">
-          <Image class="shrink-0" src={Favicon} alt="Me" width={2048} height={2048} />
-        </div>
-        <div class="text-xxs">
-          <p class="font-bold tracking-wider">CHRISTIAN PENROD</p>
-          <p class="mb-2 text-2">Front-End Web Developer</p>
-          <!-- prettier-ignore -->
-          <ul class="flex text-2 [&_[data-external-icon]]:hidden [&_a]:!pr-2 [&_svg]:!w-3">
-            <li><Link href={import.meta.env.GITHUB}><Github size={12} aria-label="Github" /></Link></li>
-            <li><Link href={import.meta.env.TWITTER}><Twitter size={12} aria-label="Twitter/X" /></Link></li>
-            <li><Link href={import.meta.env.LINKEDIN}><Linkedin size={12} aria-label="LinkedIn" /></Link></li>
-            <li><Link href={`mailto:${import.meta.env.EMAIL}`}><Mail size={12} aria-label="Email" /></Link></li>
-            <li><Link href={new URL('rss.xml', import.meta.env.SITE)}><Rss size={12} aria-label="RSS" /></Link></li>
-          </ul>
-        </div>
-      </div>
-    </aside>
-  </div>
+    </div>
+  </aside>
 </Layout>
-
-<style is:global lang="sass">
-  [data-content] a
-    @apply text-1
-
-  [data-content] p
-    @apply text-2
-
-  [data-content] blockquote
-    @apply rounded border bg-2 italic pr-4 pl-6 py-2 relative
-  [data-content] blockquote::before
-    @apply bg-3 content-[""] rounded-l absolute w-3 border-r inset-y-0 left-0
-
-  [data-content] ol
-    @apply list-decimal list-inside
-
-  [data-content] code:not([data-language])
-    @apply text-1 font-sans text-xs border rounded px-1.5 py-0.5
-
-  [data-content] details
-    @apply bg-2 rounded border [&:not(:last-of-type)]:mb-3 px-4 py-1 text-sm
-  [data-content] details[open]
-    @apply [&_summary]:mb-4 pb-4
-  [data-content] summary
-    @apply cursor-pointer select-none hover:text-brand motion-safe:transition-colors
-</style>
