--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ const posts = (await getCollection('posts'))
 ---
 
 <Layout class="mx-auto flex w-full max-w-xl flex-col gap-14 lg:max-w-screen-xl lg:gap-20 lg:px-20">
-  <section class="flex items-center gap-24">
+  <section class="flex items-center justify-between gap-24">
     <div>
       <Text as="h1" class="leading-none">CHRISTIAN PENROD</Text>
       <Text as="h2" class="text-2">Front-End Web Developer</Text>
