--- a/src/components/ui/clipboard.astro
+++ b/src/components/ui/clipboard.astro
@@ -15,9 +15,11 @@ const { class: className, 'aria-label': ariaLabel, content, target, ...props } =
   aria-label={ariaLabel ?? 'Copy to clipboard'}
   @click={`navigator.clipboard.writeText(${target} ? ${target}?.textContent?.trim() : "${content}").then(() => copied = true)`}
   @mouseleave.debounce.1000ms="copied && (copied = false)"
+  @keydown.enter.debounce.1000ms="copied && (copied = false)"
+  @keydown.space.debounce.1000ms="copied && (copied = false)"
   class={twMerge(
-    'group flex select-none items-center justify-between gap-2 rounded p-2 [&[x-cloak]]:hidden',
-    'hover:bg-3 hover:text-brand focus-visible:outline-none focus-visible:ring motion-safe:transition-colors',
+    'group flex select-none items-center justify-between gap-2 rounded p-2 [&[x-cloak]_svg:last-of-type]:hidden',
+    'hover:bg-3 hover:text-brand focus-visible:outline-none focus-visible:ring-1 motion-safe:transition-colors',
     className,
   )}
 >
