--- a/src/components/ui/navigation-menu/components/dropdown-links.astro
+++ b/src/components/ui/navigation-menu/components/dropdown-links.astro
@@ -10,8 +10,10 @@ const { class: className, ...props } = Astro.props;
 <ul
   {...props}
   :id="$id('navigation-menu-dropdown')"
+  x-show="open"
+  x-ref="navigationMenuDropdownLinks"
   class={twMerge(
-    'bg-1 absolute right-0 top-full z-50 mt-1 hidden min-w-[10rem] rounded border',
+    'absolute right-0 top-full z-50 mt-1 hidden min-w-[10rem] rounded border bg-1',
     'before:absolute before:-top-2 before:h-2 before:w-full before:content-[""]',
     'group-focus-within:block group-hover:block',
     'animate-in motion-safe:fade-in-0 motion-safe:zoom-in-90',
