--- a/src/components/ui/navigation-menu/components/dropdown-trigger.astro
+++ b/src/components/ui/navigation-menu/components/dropdown-trigger.astro
@@ -10,23 +10,22 @@ const { class: className, ...props } = Astro.props;
 
 <button
   {...props}
-  aria-expanded="false"
+  :aria-expanded="open"
   :aria-controls="$id('navigation-menu-dropdown')"
-  @mouseenter="$el.ariaExpanded = true"
-  @mouseleave="$el.ariaExpanded = false"
-  @focusin="$el.ariaExpanded = true"
-  @focusout="$el.ariaExpanded = false"
+  x-ref="navigationMenuDropdownTrigger"
+  @focusin.window="open = $el === $event.target || $refs.navigationMenuDropdownLinks?.contains($event.target)"
+  @keydown.enter.prevent.stop="open = !open"
+  @keydown.space.prevent.stop="open = !open"
   class={twMerge(
     'flex items-center gap-2 rounded px-3 py-1.5',
-    'group-hover:text-brand group-focus-within:text-brand',
-    'group-focus-within:bg-3 group-hover:bg-3 motion-safe:transition-colors',
-    'group-focus-within:outline-none group-focus-within:ring-1',
+    'focus:outline-none focus:ring-1 motion-safe:transition-colors',
+    'group-hover:bg-3 group-hover:text-brand group-hover:[&_svg]:rotate-180',
+    'group-focus-within:[&:not([aria-expanded=false])]:bg-3',
+    'group-focus-within:[&:not([aria-expanded=false])]:text-brand',
+    'group-focus-within:[&:not([aria-expanded=false])_svg]:rotate-180',
     className,
   )}
 >
   <slot />
-  <ChevronDown
-    aria-hidden
-    class="size-4 group-focus-within:rotate-180 group-hover:rotate-180 motion-safe:transition-transform"
-  />
+  <ChevronDown aria-hidden class="size-4 motion-safe:transition-transform" />
 </button>
