💄 Move back to hsl

--- a/src/components/post-card.astro
+++ b/src/components/post-card.astro
@@ -18,7 +18,7 @@ const { remarkPluginFrontmatter } = await post.render();
   aria-label={`${post.data.title}. ${post.data.description}`}
   class={twJoin(
     'group flex h-full select-none flex-col overflow-hidden rounded border',
-    'focus-visible:outline-none focus-visible:ring',
+    'focus-visible:outline-none focus-visible:ring-1',
   )}
 >
   <div class="h-14 rounded-t opacity-40 group-hover:opacity-60 motion-safe:transition-opacity">
