--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,5 +1,6 @@
 ---
 import PostCard from '@/components/post-card.astro';
+import Button from '@/components/ui/button.astro';
 import Chip from '@/components/ui/chip.astro';
 import Command from '@/components/ui/command.astro';
 import Separator from '@/components/ui/separator.astro';
@@ -39,12 +40,15 @@ const topics = [...new Set(posts.flatMap((post) => post.data.topics))].sort();
         <form
           method="post"
           class="flex flex-col gap-4 rounded border p-4 text-xs"
-          @submit.prevent="!loading && submission.get('query')?.trim() !== $el.query.value?.trim() && submit()"
+          @submit.prevent="!loading && (submission.get('query')?.trim() ?? '') !== $el.query.value?.trim() && submit()"
         >
-          <Textfield name="query" placeholder="Search Posts" aria-label="Search Posts">
-            <Search slot="prefix" aria-hidden class="size-3.5" />
-            <Command slot="suffix" key="/" @keyup.window.slash="$el.parentElement.previousElementSibling.focus()" />
-          </Textfield>
+          <div class="flex gap-2">
+            <Textfield name="query" placeholder="Search Posts" aria-label="Search Posts" class="flex-1">
+              <Search slot="prefix" aria-hidden class="size-3.5" />
+              <Command slot="suffix" key="/" @keyup.window.slash="$el.parentElement.previousElementSibling.focus()" />
+            </Textfield>
+            <Button type="submit" size="icon" aria-label="Search" :disabled="loading"><Search /></Button>
+          </div>
           <fieldset class="flex flex-wrap gap-2">
             {topics.map((value) => <Chip name="topics" x-on:click="submit" {value} />)}
           </fieldset>
