--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,19 +1,19 @@
 ---
 import favicon from '@/assets/favicon.webp';
 import ogDefault from '@/assets/og.webp';
-import Button, { buttonVariants } from '@/components/ui/button.astro';
+import { buttonVariants } from '@/components/ui/button.astro';
 import Clipboard from '@/components/ui/clipboard.astro';
 import Link from '@/components/ui/link.astro';
 import * as NavigationMenu from '@/components/ui/navigation-menu';
 import Separator from '@/components/ui/separator.astro';
 import Text from '@/components/ui/text.astro';
+import Theme from '@/components/ui/theme.astro';
 import '@fontsource/inter/400.css';
 import '@fontsource/inter/500.css';
 import '@fontsource/inter/700.css';
-import { ThemeSwitch } from 'astro-color-scheme';
 import type { HTMLAttributes } from 'astro/types';
 import { ViewTransitions } from 'astro:transitions';
-import { Github, Home, Linkedin, MoonStar, Sun, Twitter } from 'lucide-astro';
+import { Github, Home, Linkedin, Twitter } from 'lucide-astro';
 import { twMerge } from 'tailwind-merge';
 
 type Props = HTMLAttributes<'main'> & { title?: string; description?: string; og?: string };
@@ -72,12 +72,7 @@ const {
           </NavigationMenu.DropdownLinks>
         </NavigationMenu.Dropdown>
       </NavigationMenu.Root>
-      <ThemeSwitch strategy="button">
-        <Button color="ghost" size="icon" aria-label="Toggle theme">
-          <MoonStar class="hidden animate-in motion-safe:fade-in-0 motion-safe:zoom-in-50 dark:block" />
-          <Sun class="animate-in motion-safe:fade-in-0 motion-safe:zoom-in-50 dark:hidden" />
-        </Button>
-      </ThemeSwitch>
+      <Theme />
     </header>
     <main {...props} class={twMerge('flex-1 px-6 py-10 sm:px-8 sm:py-14', className)}><slot /></main>
     <footer class="flex items-center justify-between gap-3 rounded-b border-t px-6 py-4 text-2 text-xs">
