--- a/src/components/post-card.astro
+++ b/src/components/post-card.astro
@@ -1,5 +1,4 @@
 ---
-import { Image } from 'astro:assets';
 import type { CollectionEntry } from 'astro:content';
 import { Calendar, Clock4 } from 'lucide-astro';
 import { twJoin } from 'tailwind-merge';
@@ -17,15 +16,13 @@ const { remarkPluginFrontmatter } = await post.render();
   href={`/blog/${post.slug}`}
   aria-label={`${post.data.title}. ${post.data.description}`}
   class={twJoin(
-    'group flex h-full select-none flex-col overflow-hidden rounded border',
+    'group flex h-full select-none flex-col overflow-hidden rounded border shadow',
     'focus-visible:outline-none focus-visible:ring-1',
   )}
 >
-  <div class="h-14 rounded-t opacity-40 group-hover:opacity-60 motion-safe:transition-opacity">
-    <Image src={post.data.cover} alt="Post Cover" loading="eager" class="rounded-t" />
-  </div>
+  <div class="h-8 rounded-t bg-2"></div>
   <div class="z-20 flex flex-1 flex-col gap-2 border-t bg-1 p-4">
-    <Text class="font-medium group-hover:text-brand motion-safe:transition-colors">{post.data.title}</Text>
+    <Text class="text-sm group-hover:text-brand motion-safe:transition-colors">{post.data.title}</Text>
     <Text as="p" class="flex-1 text-2 text-xs">{post.data.description}</Text>
     <Separator class="my-1.5" />
     <div class="flex justify-between gap-4 text-2 text-xs">
