--- a/src/components/project-card.astro
+++ b/src/components/project-card.astro
@@ -12,12 +12,12 @@ const repo = await octokit.repos
   .then((res) => res.data);
 ---
 
-<div class="h-full rounded border">
-  <div class="bg-2 flex items-center gap-2 rounded-t border-b px-2 py-1">
-    <Book class="text-2 size-3 shrink-0" aria-hidden />
-    <Text class="font-medium">{repo.name}</Text>
+<div class="h-full rounded border shadow">
+  <div class="flex items-center gap-2 rounded-t border-b bg-2 px-2 py-1">
+    <Book class="size-3 shrink-0 text-2" aria-hidden />
+    <Text class="text-sm">{repo.name}</Text>
   </div>
-  <div class="text-2 flex flex-col gap-3 p-3">
+  <div class="flex flex-col gap-3 p-3 text-2">
     <Text as="p" class="text-xs">{repo.description}</Text>
     <Separator />
     <div class="flex items-center justify-between gap-2 text-xs">
