--- a/src/components/ui/code/components/block.astro
+++ b/src/components/ui/code/components/block.astro
@@ -13,7 +13,7 @@ const { class: className, ...props } = Astro.props;
     'whitespace-nowrap font-sans [counter-reset:line] [font-size:--shiki-font-size]',
     'bg-[--shiki-color-background] [&:not(&:has(span))]:text-[--shiki-color-text]',
     '[&:not(&:has(span))]:mx-0.5 [&:not(&:has(span))]:rounded [&:not(&:has(span))]:border',
-    '[&:not(&:has(span))]:px-1',
+    '[&:not(&:has(span))]:px-1 [&:not(&:has(span))]:py-px',
     className,
   )}
 >
