--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -77,7 +77,7 @@ const { remarkPluginFrontmatter, headings, Content } = await post.render();
       </ul>
     </div>
   </article>
-  <aside class="sticky top-20 hidden h-max rounded border p-4 xl:block">
+  <aside class="sticky top-20 hidden h-max rounded border p-4 shadow xl:block">
     <TableOfContents.Root aria-labelledby="table-of-contents">
       <TableOfContents.Title id="table-of-contents">TABLE OF CONTENTS</TableOfContents.Title>
       <TableOfContents.Links>
