--- a/src/components/ui/code/components/root.astro
+++ b/src/components/ui/code/components/root.astro
@@ -11,7 +11,7 @@ const { class: className, ...props } = Astro.props;
 <figure
   {...props}
   class={twMerge(
-    'relative rounded border bg-[--shiki-color-background]',
+    'relative grid rounded border bg-[--shiki-color-background]',
     '[&_[data-line]::before]:mr-2 [&_[data-line]::before]:[content:counter(line)]',
     '[&_[data-line]::before]:inline-block [&_[data-line]::before]:[counter-increment:line]',
     '[&_[data-highlighted-line]_span]:opacity-30 [&_[data-line]::before]:w-5 [&_[data-line]::before]:opacity-30',
