--- a/src/components/ui/code/components/block.astro
+++ b/src/components/ui/code/components/block.astro
@@ -10,10 +10,11 @@ const { class: className, ...props } = Astro.props;
 <code
   {...props}
   class={twMerge(
-    'whitespace-nowrap font-sans [counter-reset:line] [font-size:--shiki-font-size]',
+    'font-sans [counter-reset:line] [font-size:--shiki-font-size]',
     'bg-[--shiki-color-background] [&:not(&:has(span))]:text-[--shiki-color-text]',
     '[&:not(&:has(span))]:mx-0.5 [&:not(&:has(span))]:rounded [&:not(&:has(span))]:border',
-    '[&:not(&:has(span))]:px-1 [&:not(&:has(span))]:py-px',
+    '[&:not(&:has(span))]:decoration-clone [&:not(&:has(span))]:px-1 [&:not(&:has(span))]:py-px',
+    '[&:not(&:has(span))]:whitespace-nowrap',
     className,
   )}
 >
