--- a/src/components/post-github.astro
+++ b/src/components/post-github.astro
@@ -15,7 +15,7 @@ const repo = await octokit.repos
   target="_blank"
   rel="nofollow noopener noreferrer"
   aria-label={`Check out the github repo: ${repo.name}. ${repo.description}`}
-  class="group flex flex-col gap-1 rounded border px-4 py-3 shadow focus-visible:outline-none focus-visible:ring"
+  class="group flex flex-col gap-1 rounded border px-4 py-3 shadow focus-visible:outline-none focus-visible:ring-1"
 >
   <div class="flex items-center gap-2 group-hover:text-brand motion-safe:transition-colors">
     <Book class="size-3.5 shrink-0 text-2" aria-hidden />
