--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -27,7 +27,7 @@ const {
 } = Astro.props;
 ---
 
-<html lang="en" class="ml-[calc(100vw-100%)] bg-2 text-1 antialiased scrollbar-thin sm:p-4">
+<html lang="en" class="ml-[calc(100vw-100%)] scroll-pt-20 bg-2 text-1 antialiased scrollbar-thin sm:p-4">
   <head>
     <title>{title}</title>
     <meta charset="utf-8" />
