--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -4,8 +4,9 @@ import PostCard from '@/components/post-card.astro';
 import PostGithub from '@/components/post-github.astro';
 import PostSubheader from '@/components/post-subheader.astro';
 import Badge from '@/components/ui/badge.astro';
-import { buttonVariants } from '@/components/ui/button.astro';
+import Button, { buttonVariants } from '@/components/ui/button.astro';
 import * as Code from '@/components/ui/code';
+import Collapsible from '@/components/ui/collapsible.astro';
 import Date from '@/components/ui/date.astro';
 import Link from '@/components/ui/link.astro';
 import Note from '@/components/ui/note.astro';
@@ -16,7 +17,7 @@ import Layout from '@/layouts/layout.astro';
 import type { GetStaticPaths } from 'astro';
 import { Image } from 'astro:assets';
 import { getCollection, type CollectionEntry } from 'astro:content';
-import { Calendar, Clock4, Eye, Github, Linkedin, Mail, Rss, Twitter } from 'lucide-astro';
+import { Calendar, ChevronRight, Clock4, Eye, Github, Linkedin, Mail, Rss, Twitter } from 'lucide-astro';
 
 type Post = CollectionEntry<'posts'>;
 type Props = { post: Post; prev: Post; next: Post };
@@ -55,7 +56,20 @@ const { remarkPluginFrontmatter, headings, Content } = await post.render();
         <Text x-text="(await views)?.toString().padStart(6, '0')">000000</Text  >
       </Badge>
     </div>
-    <Separator class="my-8" />
+    <Separator class="my-4 lg:my-8" />
+    <Collapsible class="lg:hidden">
+      <Button slot="collapsible-trigger" color="ghost" id="table-of-contents-mobile">
+        <ChevronRight class="size-4 motion-safe:transition-transform" :class="expanded && 'rotate-90'" aria-hidden />
+        <Text>TABLE OF CONTENTS</Text>
+      </Button>
+      <TableOfContents.Root class="px-10 py-2" aria-labelledby="table-of-contents-mobile">
+        <TableOfContents.Links>
+          <TableOfContents.Link {...{ slug: 'introduction', text: 'Introduction' }} />
+          {headings.map((heading) => <TableOfContents.Link {...heading} />)}
+        </TableOfContents.Links>
+      </TableOfContents.Root>
+    </Collapsible>
+    <Separator class="my-4 lg:hidden" />
     <div class="flex max-w-[70ch] flex-col gap-8 leading-7 [&>p]:text-1/85 [&_p_a]:underline">
       <Content
         components={{
@@ -81,8 +95,8 @@ const { remarkPluginFrontmatter, headings, Content } = await post.render();
     </div>
   </article>
   <aside class="sticky top-20 hidden h-max rounded border p-4 shadow lg:block">
-    <TableOfContents.Root aria-labelledby="table-of-contents">
-      <TableOfContents.Title id="table-of-contents">TABLE OF CONTENTS</TableOfContents.Title>
+    <TableOfContents.Root aria-labelledby="table-of-contents-desktop">
+      <TableOfContents.Title id="table-of-contents-desktop">TABLE OF CONTENTS</TableOfContents.Title>
       <TableOfContents.Links>
         <TableOfContents.Link {...{ slug: 'introduction', text: 'Introduction' }} />
         {headings.map((heading) => <TableOfContents.Link {...heading} />)}
